[project]
name = "practice-transformer-riiid"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hiroaki222", email = "hiroaki.takahara.222@gmail.com" }
]
dependencies = [
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "ipykernel>=6.29.5",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/practice_transformer_riiid"]
